; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_udp.c_udp_pre_connect.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_udp.c_udp_pre_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.sockaddr = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @udp_pre_connect(%struct.sock* %0, %struct.sockaddr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sock*, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca i32, align 4
  store %struct.sock* %0, %struct.sock** %5, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = sext i32 %8 to i64
  %10 = icmp ult i64 %9, 4
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %4, align 4
  br label %18

14:                                               ; preds = %3
  %15 = load %struct.sock*, %struct.sock** %5, align 8
  %16 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %17 = call i32 @BPF_CGROUP_RUN_PROG_INET4_CONNECT_LOCK(%struct.sock* %15, %struct.sockaddr* %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %14, %11
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @BPF_CGROUP_RUN_PROG_INET4_CONNECT_LOCK(%struct.sock*, %struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
